--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-
-小林 優季（こばやし ゆき）　Yuki Kobayashi
-
-2019　多摩美術大学統合デザイン学科入学。
-
-グラフィックデザイン、インダストリアルデザイン、インターフェースデザインなど人とデザインのありかたについて幅広く勉強しています。
-
-　
+test
